# arkcompiler_ets_runtime

./: .gitignore  1.diff  AGENTS.md  BUILD.gn  OAT.xml  README.md  README_zh.md  REVIEWERS  bundle.json  cfi_blocklist.txt  developer  hisysevent.yaml  js_runtime_config.gni  libark_jsruntime.map  plugin.gn  subproject_sources.gn
common_components/: BUILD.gn  runtime.cpp
common_components/base/: atomic_spin_lock.h  c_string.cpp  c_string.h  config.h  globals.h  mem_utils.cpp  rw_lock.h  spin_lock.h  time_utils.cpp  time_utils.h  utf_helper.cpp  utf_helper.h
common_components/base/tests/: BUILD.gn  mem_utils_test.cpp
common_components/base_runtime/: base_runtime.cpp  base_runtime_param.cpp  base_runtime_param.h  hooks.h
common_components/common/: base_object.h  page_allocator.h  page_pool.h  type_def.h  work_stack.h
common_components/common/tests/: BUILD.gn
common_components/common_runtime/: .clang-format  base_runtime.cpp  base_runtime_param.h  hooks.h
common_components/common_runtime/src/: BUILD.gn  common_runtime.h  common_runtime_api.cpp  heap_manager.cpp  heap_manager.h
common_components/common_runtime/tests/: BUILD.gn  base_runtime_test.cpp
common_components/heap/: heap.cpp  heap.h  heap_allocator.cpp  heap_manager.h  heap_proxy.cpp  heap_proxy.h  heap_visitor.cpp  verification.cpp
common_components/heap/allocator/: alloc_buffer.h  allocator.cpp  allocator.h  fix_heap.cpp  fix_heap.h  free_region_manager.h  local_deque.h  memory_map.cpp  memory_map.h  region_desc.h  region_manager.cpp  region_manager.h  region_space.cpp  region_space.h  regional_heap.cpp  regional_heap.h
common_components/heap/ark_collector/: ark_collector.cpp  ark_collector.h
common_components/heap/collector/: collector.h  collector_proxy.cpp  collector_proxy.h  collector_resources.cpp  collector_resources.h  copy_data_manager.cpp  copy_data_manager.h  finalizer_processor.cpp  gc_request.cpp  gc_request.h  gc_stats.cpp  gc_stats.h  heuristic_gc_policy.cpp  heuristic_gc_policy.h  marking_collector.cpp  marking_collector.h  region_bitmap.h  region_rset.h  task_queue.h  trace_collector.cpp  trace_collector.h  utils.cpp  utils.h
common_components/heap/space/: from_space.cpp  from_space.h  large_space.cpp  mature_space.cpp  nonmovable_space.cpp  old_space.h  regional_space.h  to_space.cpp  to_space.h  young_space.h
common_components/heap/tests/: BUILD.gn  verification_test.cpp
common_components/heap/w_collector/: copy_barrier.cpp  enum_barrier.cpp  idle_barrier.cpp  idle_barrier.h  remark_barrier.cpp  (+5 more)
common_components/log/: log.cpp  log.h  log_base.h
common_components/mutator/: mutator.cpp  mutator.h  mutator.inline.h  mutator_manager-inl.h  mutator_manager.cpp  mutator_manager.h  satb_buffer.cpp  thread_local.cpp
common_components/objects/: base_object.cpp  base_string.cpp  base_string_table.cpp  composite_base_class.cpp  string_table_internal.h
common_components/platform/: cpu.h  mutex.h  os.h
common_components/profiler/: heap_profiler_listener.cpp
common_components/serialize/: serialize_utils.cpp  serialize_utils.h
common_components/taskpool/: runner.cpp  runner.h  task.h  task_queue.h  taskpool.cpp  taskpool.h
common_components/tests/: ohos_test.xml  test_helper.gni  test_hooks.cpp
common_components/thread/: thread_holder.cpp  thread_holder_manager.cpp
compiler_service/: AGENTS.md  BUILD.gn  compiler_service.cfg  libaot_compiler_service.map  static_app_install_aot_enable_list.conf  system_framework_aot_enable_list.conf
compiler_service/include/: aot_args_handler.h  aot_args_list.h  aot_args_verify.h  aot_compiler_args.h  aot_compiler_client.h  aot_compiler_constants.h  aot_compiler_error_utils.h  aot_compiler_impl.h  aot_compiler_service.h  power_disconnected_listener.h
compiler_service/interface/: aot_compiler_interface_proxy.cpp  aot_compiler_interface_proxy.h  aot_compiler_interface_stub.cpp  aot_compiler_interface_stub.h  iaot_compiler_interface.h
compiler_service/sa_profile/: 5300.json
compiler_service/src/: aot_args_handler.cpp  aot_args_verify.cpp  aot_compiler_client.cpp  aot_compiler_error_utils.cpp  aot_compiler_impl.cpp  aot_compiler_load_callback.cpp  aot_compiler_service.cpp  power_disconnected_listener.cpp
compiler_service/test/: BUILD.gn  aot_compiler_service_test.cpp  compiler_service_test.gni
ecmascript/sdk/: BUILD.gn
ecmascript/snapshot_test/: BUILD.gn  common_snapshot_test.cpp  common_snapshot_test2.cpp  common_snapshot_test3.cpp
test/: run_test262.sh  run_ts_test262.py  runtest.py  test_helper.gni
test/aotjsperftest/: README_en.md  config.json  run_js_test.py
test/aottest/: BUILD.gn  makefile  runtest.sh  runtestall.sh
test/deopttest/: BUILD.gn
test/executiontest/: BUILD.gn  thread_termination_test.cpp
test/ffiworkloadtest/: README.md  get_ffi_workload_report.py  run_ffi_workload_test.sh
test/fuzztest/: BUILD.gn
test/jittest/: BUILD.gn
test/jsperftest/: README.md  prerun_proc.py  run_js_perf_test.sh  run_js_test.py
test/moduletest/: BUILD.gn
test/pgotypeinfer/: BUILD.gn
test/quickfix/: BUILD.gn  generate_js_and_merge_file.py  generate_merge_file.py  retest.txt  test.txt
test/regresstest/: ignored-regresstest-debug-x64-aot-pgo.txt  ignored-regresstest-debug-x64.txt  ignored-regresstest-fastverify-x64-aot-pgo-litecg.txt  ignored-regresstest-fastverify-x64-aot-pgo-llvmcg.txt  ignored-regresstest-fastverify-x64-aot-pgo.txt  ignored-regresstest-fastverify-x64.txt  ignored-regresstest-release-x64-aot-pgo.txt  ignored-regresstest-release-x64.txt  regress_options.json  regress_skip_force_gc.json  regress_test_config.py  regress_throw_uncaught_error.json  regresstest_skip_tests.json  run_regress_test.py
test/typeinfer/: BUILD.gn
test/ut/: ignore-ut-debug-qemu-ets_runtime.txt  ignore-ut-debug-x64-ets_runtime-cmc-gc.txt  ignore-ut-debug-x64-ets_runtime-disable-cmc-gc.txt  ignore-ut-debug-x64-ets_runtime.txt  ignore-ut-release-qemu-ets_runtime-cmc-gc.txt  ignore-ut-release-qemu-ets_runtime.txt  ignore-ut-release-x64-ets_runtime-cmc-gc.txt  ignore-ut-release-x64-ets_runtime.txt
test/workloadtest/: work_load.py
(+6752 files in other folders)
